<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/containerDate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="15dp"
        android:background="@color/black_trans"
        android:orientation="horizontal" >

        <TextView
            android:id="@+id/lblDate"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/black"
            android:text="@string/date" />

        <TextView
            android:id="@+id/tvDate"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_weight="2" />
    </LinearLayout>

    <TextView
        android:id="@+id/lblSunriseSunset"
        style="@style/Title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerDate"
        android:layout_marginTop="10dp"
        android:background="@android:color/black"
        android:text="@string/sunrise_sunset" />

    <LinearLayout
        android:id="@+id/containerSunrise"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/lblSunriseSunset"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblSunrise"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunrise" />

        <TextView
            android:id="@+id/tvSunrise"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSunset"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerSunrise"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblSunset"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/sunrise" />

        <TextView
            android:id="@+id/tvSunset"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_alignBottom="@+id/lblWeather"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_alignTop="@+id/lblWeather"
        android:background="@android:color/black" >
    </LinearLayout>

    <TextView
        android:id="@+id/lblWeather"
        style="@style/Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_below="@+id/containerSunset"
        android:layout_marginTop="10dp"
        android:text="@string/weather" />

    <LinearLayout
        android:id="@+id/containerTemperature"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/lblWeather"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblTemperature"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/temperature_" />

        <TextView
            android:id="@+id/tvTemperature"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerPressure"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerTemperature"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblPressure"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/pressure_" />

        <TextView
            android:id="@+id/tvPressure"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerHumidity"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerPressure"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblTemperature"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/humidity_" />

        <TextView
            android:id="@+id/tvHumidity"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerWindSpeed"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerHumidity"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblWindSpeed"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/wind_speed_" />

        <TextView
            android:id="@+id/tvWindSpeed"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/containerSeason"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/containerDate"
        android:layout_alignRight="@+id/containerDate"
        android:layout_below="@+id/containerWindSpeed"
        android:background="@color/black_trans" >

        <TextView
            android:id="@+id/lblSeason"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/season_" />

        <TextView
            android:id="@+id/tvSeason"
            style="@style/Values"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1" />
    </LinearLayout>
    

    <ImageView
        android:id="@+id/ivSun"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_alignBottom="@+id/lblWeather"
        android:layout_toRightOf="@+id/lblWeather"
        android:background="@drawable/sun" />

    <ImageButton
        android:id="@+id/imageButton1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:background="@drawable/image_button_background"
        android:padding="5dp"
        android:src="@drawable/satellite_vista" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:background="@drawable/image_button_background"
        android:padding="5dp"
        android:src="@drawable/insect_robot" />



    <TextView
        android:id="@+id/planet_label"
        android:layout_width="332dp"
        android:layout_height="74dp"
        android:layout_above="@+id/imageButton1"
        android:layout_alignParentLeft="true"
        android:gravity="center"
        android:text="@string/planet_label_mars"
        android:textSize="60sp"
        android:textColor="@color/red"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <Button
        android:id="@+id/changeToEarth"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignTop="@+id/imageButton2"
        android:layout_toLeftOf="@+id/imageButton2"
        android:layout_toRightOf="@+id/imageButton1"
        android:background="@android:color/transparent"
        android:text="@string/planet_label_earth"
        android:textSize="40sp"
        android:onClick="changeToEarth"
        android:textColor="@color/blue"/>

</RelativeLayout>